--- a/assets/jcem/consent-manager/_silktide.scss
+++ b/assets/jcem/consent-manager/_silktide.scss
@@ -11,14 +11,13 @@
 /* Wrapper (Global) */
 #silktide-wrapper {
 	--focus: 0 0 0 2px #ffffff, 0 0 0 4px #000000, 0 0 0 6px #ffffff;
-	--boxShadow: -5px 5px 10px 0px #00000012, 0px 0px 50px 0px #0000001a;
-	--fontFamily: Helvetica Neue, Segoe UI, Arial, sans-serif;
-	--primaryColor: #533be2;
+	--boxShadow: -0.5em 0.5em 0.7em 0px #00000012, 0px 0px 2em 0px #000;
+	--primaryColor: #104b74;
 	--backgroundColor: #ffffff;
-	--textColor: #4b494b;
+	--textColor: #333;
 	--backdropBackgroundColor: #0000004d;
 	--backdropBackgroundBlur: 0.2em;
-	--cookieIconColor: #4b494b;
+	--cookieIconColor: #333;
 	--cookieIconBackgroundColor: #ffffff;
 	--ref_size: 0.85rem;
 	position: fixed;
@@ -50,6 +49,7 @@
   Links
 -------------------------------- */
 #silktide-wrapper a {
+	overflow: hidden;
 	all: unset;
 	display: inline-block;
 	color: var(--primaryColor);
@@ -122,7 +122,6 @@
 -------------------------------- */
 #silktide-banner {
 	font-size: 0.8rem;
-	font-family: var(--fontFamily);
 	color: var(--textColor);
 	background-color: var(--backgroundColor);
 	box-sizing: border-box;
@@ -134,7 +133,7 @@
 	bottom: 4m;
 	right: 1em;
 	width: 37.5em;
-	overflow: auto;
+	overflow: hidden;
 	max-width: calc(100% - 2em);
 	max-height: calc(100vh - 2em);
 	transform: translate(0, -1.25em);
@@ -176,16 +175,28 @@
 	padding: 0;
 	border: none;
 	background: transparent;
+	margin: 0;
+	height: 2.5em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-right: -0.3em;
+	margin-left: 1em;
+	width: 2.5em;
+	text-align: right;
 	&::after {
 		display: inline-block;
 		gap: 0.3125em;
 		border: none;
-		margin: 0 0.5em;
-		padding: 0.9375em 0;
+		margin: 0;
+		height: 2em;
+		padding: 0;
+		padding-left: 0.1em;
+		padding-top: 0.95em;
 		background-color: transparent;
 		color: var(--primaryColor);
 		font-size: 2em;
-		width: 2.5rem;
+		width: 1.5rem;
 		content: '\f013';
 		text-decoration: none;
 	}
@@ -203,7 +214,7 @@
 
 #silktide-banner p {
 	font-size: 1em;
-	line-height: 1.5em;
+	line-height: 1.2em;
 	margin: 0 0 0.9375em;
 	text-align: justify;
 }
@@ -268,7 +279,6 @@
 	opacity: 0;
 	animation: silktide-slideInUp-center 350ms ease-out forwards;
 	box-shadow: -5px 5px 10px 0px #00000012, 0px 0px 50px 0px #0000001a;
-	font-family: var(--fontFamily);
 	color: var(--textColor);
 	flex-direction: column;
 	padding: 1.875em;
@@ -289,7 +299,6 @@
 }
 
 #silktide-modal h1 {
-	font-family: var(--fontFamily);
 	color: var(--textColor);
 	font-size: 1.5em;
 	font-weight: 500;
