--- a/assets/jcem/css/jcmain.scss
+++ b/assets/jcem/css/jcmain.scss
@@ -127,7 +127,7 @@ footer {
 				&:hover {
 					&,
 					i {
-						color: $primary-color;
+						color: var(--primary-color);
 					}
 				}
 			}
