--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,4 +7,5 @@ search: false
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import 'minimal-mistakes'; // main partials
+@import '../../_sass/minimal-mistakes/skins/variables-custom';
 @import '../jcem/css/jcmain.scss';
